Basic wrapper + img files

--- a/housesofcards.html
+++ b/housesofcards.html
@@ -2,13 +2,18 @@
 <html lang="en-us">
 	<head>
 		<title> Houses of Cards </title>
+
+		<link rel="stylesheet" type="text/css" href="custom.css" />
 	</head>
 	<body>
 
-		<script src="test.js"></script>
+		<script src="libs/jquery-3.2.1.min.js"></script>
 
-		<div class="main-container">
+		<div id="main-container" class="main-container">
+			<canvas  id="main-canvas" class="main-canvas"></canvas>
         </div>
+
+		<script src="test.js"></script>
 
 	</body>
 </html>
