--- a/housesofcards.html
+++ b/housesofcards.html
@@ -13,7 +13,7 @@
 			<canvas  id="main-canvas" class="main-canvas"></canvas>
         </div>
 
-		<script src="test.js"></script>
+		<script src="main.js"></script>
 
 	</body>
 </html>
