Changes to make this work with webservers
-Changed port to 4000 to avoid conflict with wiki.js
-Moved back to path.join
-Commented out some debug outputs
-Updated README

--- a/public/housesofcards.html
+++ b/public/housesofcards.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Houses of Cards </title>
 
-		<link rel="stylesheet" href="/css/custom.css" />
+		<link rel="stylesheet" href="css/custom.css" />
 	</head>
 	<body>
 
@@ -11,8 +11,7 @@
 			<canvas  id="main-canvas" class="main-canvas"></canvas>
         </div>
 
-		<script src="../js/app.js"></script>
-		<script src="../js/bundle.js"></script>
+		<script src="js/bundle.js"></script>
 
 	</body>
 </html>
