socket.io test on webserver

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 			<canvas  id="main-canvas" class="main-canvas"></canvas>
         </div>
 
+		<script src="/socket.io/socket.io.js"></script>
+		<script>
+  			var socket = io();
+		</script>
 		<script src="js/bundle.js"></script>
 
 	</body>
